--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.mongodb.embedded.version=3.5.5
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=rootuser
+spring.data.mongodb.password=rootpass
+spring.data.mongodb.database=reactive
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost 
